[project]
name = "opentwitter-mcp"
version = "0.1.0"
description = "MCP server for Twitter/X data via 6551 REST API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.25,<2",
    "httpx>=0.27",
]

[project.scripts]
opentwitter-mcp = "opentwitter_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opentwitter_mcp"]
